<resources>
<string name="debug_resolution">mdpi</string>
<string name="debug_screensize">normal</string>
<string name="app_name">Cryptnos</string>
<string name="app_description">Cryptnos is a small utility for generating strong, unique, yet repeatable passwords using cryptographic hashes.</string>
<string name="meta_replace_token">xxx</string>
<string name="mainmenugrid_new">New</string>
<string name="mainmenugrid_regenerate">Regenerate</string>
<string name="mainmenugrid_edit">Edit</string>
<string name="mainmenugrid_delete">Delete</string>
<string name="mainmenugrid_export">Export</string>
<string name="mainmenugrid_import">Import</string>
<string name="mainmenugrid_settings">Settings</string>
<string name="mainmenugrid_help">Help</string>
<string name="mainmenu_existing1">Regenerate password</string>
<string name="mainmenu_existing2">Generate a password from an existing set of parameters</string>
<string name="mainmenu_generate1">Generate new password</string>
<string name="mainmenu_generate2">Specify a new set of parameters and generate the resulting password</string>
<string name="mainmenu_edit1">Edit existing parameters</string>
<string name="mainmenu_edit2">Edit the parameters associated with a given password</string>
<string name="mainmenu_delete1">Delete parameters</string>
<string name="mainmenu_delete2">Delete saved parameters from the database</string>
<string name="mainmenu_export1">Export</string>
<string name="mainmenu_export2">Export saved parameters to an encrypted file or QR code</string>
<string name="mainmenu_import1">Import</string>
<string name="mainmenu_import2">Import saved parameters from an encrypted file or QR code</string>
<string name="mainmenu_advanced1">Settings</string>
<string name="mainmenu_advanced2">Modify advanced settings that affect how Cryptnos works</string>
<string name="mainmenu_help1">Cryptnos Help</string>
<string name="mainmenu_help2">Help and tutorials on how to use Cryptnos</string>
<string name="mainmenu_about1">About Cryptnos</string>
<string name="mainmenu_about2">Additional information about this application</string>
<string name="mainmenu_dialog_advanced_settings_title">Warning</string>
<string name="mainmenu_dialog_advanced_settings_text">Modifying the advanced settings may potentially "break" your existing passwords. Are you sure you wish to continue?</string>
<string name="mainmenu_dialog_import_method">Import From</string>
<string name="mainmenu_dialog_export_method">Export To</string>
<string name="mainmenu_dialog_import_overwrite_title">Overwrite Site</string>
<string name="mainmenu_dialog_import_overwrite_warn">The scanned site \"xxx\" already exists in the database. Are you sure you want to overwrite it?</string>
<string name="mainmenu_dialog_import_success">The scanned parameters for site \"xxx\" have been successfully imported.</string>
<string name="mainmenu_dialog_import_error1">Error: No valid Cryptnos parameter data was found, so nothing was imported.</string>
<string name="mainmenu_dialog_import_error2">Error: The data from the scanned QR code could not be imported into the database.</string>
<string name="optmenu_help">Help</string>
<string name="optmenu_about">About</string>
<string name="new_title">Cryptnos: Generate New Password</string>
<string name="edit_title">Cryptnos: Edit Parameters</string>
<string name="edit_hash_prompt">Hash algorithm</string>
<string name="sitelist_title">Cryptnos: Saved Sites</string>
<string name="sitelist_loading_message">Loading, please wait&#8230;</string>
<string name="sitelist_contextmenu_header">Site Options</string>
<string name="sitelist_optmenu_delete_all">Delete All</string>
<string name="sitelist_dialog_confirmdetele_title">Confirm Delete</string>
<string name="sitelist_dialog_confirmdetele_msg">Are you sure you want to delete the site \"xxx\"?</string>
<string name="sitelist_dialog_confirmdetele_success">The site \"xxx\" has been successfully deleted.</string>
<string name="sitelist_dialog_confirmdetele_fail">Error: The site \"xxx\" could not be deleted.</string>
<string name="sitelist_dialog_confirmdeteleall_msg">Are you sure you want to delete all sites from the database? This cannot be undone!</string>
<string name="sitelist_dialog_confirmdeteleall_success">xxx site(s) have been successfully deleted.</string>
<string name="sitelist_dialog_confirmdeteleall_fail">Error: No sites were deleted from the database.</string>
<string name="dialog_select_all">Select All</string>
<string name="dialog_clear_all">Clear All</string>
<string name="edit_site_label">Site token:</string>
<string name="edit_site_hint">Enter a unique site mnemonic here</string>
<string name="edit_password_label">Master Password:</string>
<string name="edit_password_hint">Enter your master password here</string>
<string name="edit_hash_label">Hash algorithm:</string>
<string name="edit_iterations_label">Number of hash iterations:</string>
<string name="edit_iterations_hint">Enter a positive integer > 0</string>
<string name="edit_chartypes_label">Character restrictions:</string>
<string name="edit_chartypes_prompt">Character restrictions</string>
<string name="edit_charlimit_label">Length restrictions:</string>
<string name="edit_charlimit_prompt">Length restrictions</string>
<string name="edit_charlimit_none">None</string>
<string name="edit_charlimit_hint">Integer > 0, 0 = no limit</string>
<string name="edit_generate_button_label">Generate</string>
<string name="edit_output_label">Generated password:</string>
<string name="edit_output_hint">Your generated password will appear here</string>
<string name="edit_gen_success">Password generated and copied to the clipboard.</string>
<string name="edit_gen_success_no_copy">Password generated.</string>
<string name="edit_save_success">Parameters successfully saved to the database.</string>
<string name="gen_exist_title">Cryptnos: Regenerate Password</string>
<string name="gen_exist_site_prompt">Site:</string>
<string name="gen_exist_hash_prompt">Hash algorithm:</string>
<string name="gen_exist_iterations_prompt">Iterations:</string>
<string name="gen_exist_chartypes_prompt">Character restrictions:</string>
<string name="gen_exist_charlimit_prompt">Length restriction:</string>
<string name="gen_exist_charlimit_none">none</string>
<string name="menu_delete">Delete</string>
<string name="menu_edit">Edit</string>
<string name="menu_generate">Regenerate password</string>
<string name="menu_export_qrcode">Export via QR code</string>
<string name="export_title">Cryptnos: Export to File</string>
<string name="export_file_label">Specify the name of the file to export to. The file will be created in the root folder of your default mass storage. If a file with the same name already exists, it will be overwritten.</string>
<string name="export_file_label_pick_path">Specify the path and name of the file to export to. Use the Selected Path button to select a path to save to, then enter the file name in the text box below it. If a file with the same name already exists in the selected path, it will be overwritten.</string>
<string name="export_file_hint">Enter a file name</string>
<string name="export_file_pick_path_button_label">Selected path:</string>
<string name="export_file_dialog_title">Select an export path</string>
<string name="export_password1_label">Enter a password. The export file will be encrypted using this password.</string>
<string name="export_password1_hint">Enter a password here</string>
<string name="export_password2_label">Re-enter your password again, just to make sure it was entered correctly.</string>
<string name="export_password2_hint">Re-enter your password here</string>
<string name="export_pick_sites_button_label">Pick sites to export&#8230;</string>
<string name="export_export_button_label">Export</string>
<string name="export_loading_message">Loading site list&#8230;</string>
<string name="export_select_sites_title">Select Sites</string>
<string name="export_selected_count_message">xxx site(s) currently selected</string>
<string name="export_complete_message">Export complete. xxx site(s) exported.</string>
<string name="export_progress_message">Exporting, please wait&#8230;</string>
<string name="import_title">Cryptnos: Import from File</string>
<string name="import_file_label_nofile">No readable files could be found on your default mass storage device. Please tap <b>Back</b> to return to the main menu.</string>
<string name="import_file_label_filefound">Please select a file from the root folder of your default mass storage device to use as an import file. If your import file is not in the list below, you must move it to the root folder of your default mass storage before attempting an import.</string>
<string name="import_file_prompt">Select import file</string>
<string name="import_file_label_oiimport">Please select a file from your mass storage device to use as an import file.</string>
<string name="import_file_button_prompt">Selected file:</string>
<string name="import_file_button_prompt_none">(none)</string>
<string name="import_file_dialog_title">Select an import file</string>
<string name="import_file_dialog_button">Select</string>
<string name="import_password_label">Enter the password you used to encrypt the file on export.</string>
<string name="import_warning_label"><b>Warning:</b> If the import file contains parameters for a site that already exists in the database, the existing site parameters <i>will</i> be overwritten with the values from the import file.</string>
<string name="import_button_label">Import</string>
<string name="import_progress_message">Importing, please wait&#8230;</string>
<string name="import_complete_message">Import complete. xxx site(s) imported.</string>
<string name="import_overwrite_warning_dialog_title">Overwrite Warning</string>
<string name="import_overwrite_warning_dialog_text">At least one of the selected sites from the import file will overwrite an existing site in the database. Do you  wish to proceed with the import?</string>
<string name="settings_title">Cryptnos: Settings</string>
<string name="settings_encoding_label">Text encoding (UTF-8 strongly recommended):</string>
<string name="settings_encoding_prompt">Available encodings</string>
<string name="settings_default_encoding_label">System default encoding: xxx</string>
<string name="settings_confirm_encoding_change_title">Change Text Encoding</string>
<string name="settings_confirm_encoding_change">Are you sure you wish to change the text encoding used by Cryptnos? This may \"break\" your current passwords and make them incompatible with versions of Cryptnos on other platforms.</string>
<string name="settings_file_manager_pref_label">Preferred file manager:</string>
<string name="settings_file_manager_prompt">Available file managers</string>
<string name="settings_no_file_managers_available">No recognized file managers could be found. To take advantage of a third-party file manager during import and export operations, please install one of the following applications:\n\n</string>
<string name="settings_qrscanner_pref_label">Preferred QR code scanner:</string>
<string name="settings_qrscanner_prompt">Available QR code scanners</string>
<string name="settings_no_qrscanner_available">No recognized QR code scanners could be found. To import or export parameters via QR code, please install one of the following applications:\n\n</string>
<string name="settings_copy_passwords">Copy generated passwords to clipboard</string>
<string name="settings_show_master_passwd">Show master passwords</string>
<string name="settings_show_master_passwd_dialog_title">Show Master Passwords</string>
<string name="settings_show_debug_able">Show debug information</string>
<string name="settings_clear_passwds_on_focus_loss">Clear passwords when Cryptnos goes into the background</string>
</resources>