<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ScrollViewSettings"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="5sp">
	<LinearLayout android:id="@+id/layoutSettings"
   		android:orientation="vertical"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content">
		<CheckBox android:id="@+id/chkCopyPasswordsToClipboard"
			android:text="@string/settings_copy_passwords"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"></CheckBox>
		<CheckBox android:id="@+id/chkShowMasterPasswords"
			android:text="@string/settings_show_master_passwd"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"></CheckBox>
		<CheckBox android:id="@+id/chkClearPasswdsOnFocusLoss"
			android:text="@string/settings_clear_passwds_on_focus_loss"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"></CheckBox>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/labelEncoding"
			android:text="@string/settings_encoding_label"></TextView>
		<Spinner android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:id="@+id/spinEncodings"></Spinner>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="5dp"
			android:id="@+id/labelDefaultEncoding"
			android:text="@string/settings_default_encoding_label"></TextView>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/labelFileManagerPreference"
			android:text="@string/settings_file_manager_pref_label"></TextView>
		<Spinner android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:paddingBottom="5dp"
			android:id="@+id/spinFileManagers"></Spinner>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="5dp"
			android:id="@+id/labelNoFileManagersAvailable"
			android:text="@string/settings_no_file_managers_available"></TextView>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/labelQRScannerPreference"
			android:text="@string/settings_qrscanner_pref_label"></TextView>
		<Spinner android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:id="@+id/spinQRScanners"></Spinner>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/labelNoQRScannersAvailable"
			android:text="@string/settings_no_qrscanner_available"></TextView>
		<CheckBox android:id="@+id/chkShowDebugInfo"
			android:text="@string/settings_show_debug_able"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"></CheckBox>
	</LinearLayout>
</ScrollView>
