<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:padding="5sp">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/layoutImport">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/labelImportFile"
				android:text="@string/import_file_label_nofile"></TextView>
			<Button android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/btnOIImportFileSelect"
				android:text="@string/import_file_button_prompt"></Button>
			<Spinner android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:id="@+id/spinImportFiles"></Spinner>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/labelPassphraseImport"
				android:text="@string/import_password_label"></TextView>
			<EditText android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/txtPassphraseImport"
				android:password="true"
				android:ellipsize="none"
				android:saveEnabled="false"
				android:hint="@string/export_password1_hint"></EditText>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/labelImportWarning"
				android:text="@string/import_warning_label"></TextView>
			<Button android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/btnImport"
				android:text="@string/import_button_label"></Button>
	</LinearLayout>
</ScrollView>
