<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5sp">
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/labelSiteName"
				android:textSize="20sp"
		        android:textStyle="bold"
		        android:paddingBottom="2dp"
				android:text=""></TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/labelOtherParams"
		        android:paddingBottom="5dp"
				android:text=""></TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/labelPassphrase"
				android:text="@string/edit_password_label"></TextView>
			<EditText android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/txtPassphrase"
				android:ellipsize="none"
				android:saveEnabled="false"
				android:hint="@string/edit_password_hint"></EditText>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/labelOutput"
				android:text="@string/edit_output_label"></TextView>
			<EditText android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/txtOutput"
				android:ellipsize="none"
				android:saveEnabled="false"
				android:hint="@string/edit_output_hint"
				android:inputType="none"></EditText>
			<Button android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/btnGenerate"
				android:text="@string/edit_generate_button_label"></Button>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
